src/objects/Payment__c.object
<CustomObject>


    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>AccountPayments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AmountText__c</fullName>
        <description>DO NOT DELETE - USED TO CREATE ABA FILE.</description>
        <label>AmountText</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSB_Number__c</fullName>
        <label>BSB Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Jobs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Jobs</label>
        <referenceTo>Batch_Jobs__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Reference__c</fullName>
        <label>Customer Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentJson__c</fullName>
        <description>Hold the json string of the payment that will be passed to QBO</description>
        <label>PaymentJson</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QuickBook_Id__c</fullName>
        <label>QuickBook Id</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Payment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Total_Amount__c</columns>
        <columns>Batch_Jobs__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PT-{0000}</displayFormat>
        <label>Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>